# glib-gcc-plugin

./: .gitignore  Makefile  README.md  gen-standalone-headers.pl  ggp-cstdint.hh  ggp-main.cc  ggp-main.hh  ggp-plugin.cc  ggp-tc.cc  ggp-tc.hh  ggp-type.cc  ggp-type.hh  ggp-util-detail.hh  ggp-util.cc  ggp-util.hh  ggp-variant.cc  ggp-variant.hh  ggp-vc.cc  ggp-vc.hh  meson.build  plugin.c  some-old-crap.c  test.c
ggp/: meson.build  test.c
ggp/code-experiments/: cond.c  dump-test.sh  loop.c  meson.build  test.c  variant.c
ggp/gcc/: gcc.hh  main.cc  main.hh  meson.build  plugin.cc  tc.cc  tc.hh  token.hh  tree.cc  tree.hh  util.cc  util.hh  vc.cc  vc.hh
ggp/lib/: cfg.hh  meson.build  type-print.cc  type-print.hh  type.cc  type.hh  typeutil.hh  util.hh  value.hh  variant-print.cc  variant-print.hh  variant.cc  variant.hh
ggp/lib/detail/: util.hh
ggp/lib/pp/: meson.build  pp-gen.hh.in  pp-gen.py  pp.hh
ggp/pp/: meson.build  pp-gen.hh.in  pp-gen.py  pp.hh
ggp/test/: main.cc  meson.build  test-print.cc  test-print.hh  token.hh  type-test.cc  variant-test.cc
scripts/: gen-gcc.sh  gen-standalone-files.pl  gen-standalone-headers.pl  gen-test.sh  meson.build
